[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "A blog web application written in python using the Django framework"
authors = ["Davi Feliciano <dfeliciano37@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
black = "^22.10.0"
djlint = "^1.19.1"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
